--- a/index.html
+++ b/index.html
@@ -1,2 +1,75 @@
 # grade-predictor-ai
-AI-powered grade prediction and study assistant
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Grade Predictor AI+</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
+
+  <div class="bg-white shadow-xl rounded-2xl p-6 w-full max-w-4xl grid grid-cols-1 md:grid-cols-2 gap-6">
+
+    <!-- LEFT: GRADE PREDICTOR -->
+    <div>
+      <h1 class="text-2xl font-bold mb-2">Grade Predictor AI+</h1>
+      <p class="text-sm text-gray-500 mb-4">Predict tests, quizzes, homework & get target scores</p>
+
+      <label class="block mb-1 font-medium">School Grading System</label>
+      <select id="gradingSystem" class="w-full p-2 border rounded mb-3">
+        <option value="standard">Standard (90-80-70-60)</option>
+        <option value="plusminus">Plus/Minus</option>
+        <option value="strict">Strict (92-85-75-65)</option>
+      </select>
+
+      <label class="block mb-1 font-medium">Current Overall Grade (%)</label>
+      <input id="currentGrade" type="number" class="w-full p-2 border rounded mb-3" />
+
+      <label class="block mb-1 font-medium">Test Average (%)</label>
+      <input id="testGrade" type="number" class="w-full p-2 border rounded mb-3" />
+
+      <label class="block mb-1 font-medium">Quiz Average (%)</label>
+      <input id="quizGrade" type="number" class="w-full p-2 border rounded mb-3" />
+
+      <label class="block mb-1 font-medium">Homework Average (%)</label>
+      <input id="hwGrade" type="number" class="w-full p-2 border rounded mb-3" />
+
+      <label class="block mb-1 font-medium">Weights (Tests / Quizzes / HW) %</label>
+      <div class="grid grid-cols-3 gap-2 mb-4">
+        <input id="wtTest" type="number" class="p-2 border rounded" placeholder="50" />
+        <input id="wtQuiz" type="number" class="p-2 border rounded" placeholder="30" />
+        <input id="wtHW" type="number" class="p-2 border rounded" placeholder="20" />
+      </div>
+
+      <label class="block mb-1 font-medium">Target Grade (A/B/C)</label>
+      <input id="targetGrade" type="text" class="w-full p-2 border rounded mb-4" placeholder="A" />
+
+      <button onclick="runPrediction()" class="w-full bg-blue-600 text-white py-2 rounded-xl hover:bg-blue-700 transition">
+        Predict Grades & Target Score
+      </button>
+
+      <div id="result" class="mt-4 text-sm font-semibold"></div>
+      <div id="studyTips" class="mt-3 text-sm text-gray-700"></div>
+    </div>
+
+    <!-- RIGHT: AI CHATBOX -->
+    <div class="flex flex-col">
+      <h2 class="text-xl font-bold mb-2">Ask the AI</h2>
+      <div id="chatBox" class="flex-1 border rounded p-3 mb-3 overflow-y-auto text-sm bg-gray-50"></div>
+
+      <div class="flex gap-2">
+        <input id="userQuestion" class="flex-1 border p-2 rounded" placeholder="Ask about grades, studying, etc." />
+        <button onclick="askAI()" class="bg-green-600 text-white px-4 rounded">Send</button>
+      </div>
+    </div>
+
+  </div>
+
+  <script>
+    /* your JS stays here exactly as before */
+  </script>
+
+</body>
+</html>
+3
