--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-# grade-predictor-ai
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,70 +5,217 @@
   <title>Grade Predictor AI+</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://js.stripe.com/v3/"></script>
 </head>
 <body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
 
-  <div class="bg-white shadow-xl rounded-2xl p-6 w-full max-w-4xl grid grid-cols-1 md:grid-cols-2 gap-6">
+  <div class="w-full max-w-4xl">
 
-    <!-- LEFT: GRADE PREDICTOR -->
-    <div>
-      <h1 class="text-2xl font-bold mb-2">Grade Predictor AI+</h1>
-      <p class="text-sm text-gray-500 mb-4">Predict tests, quizzes, homework & get target scores</p>
-
-      <label class="block mb-1 font-medium">School Grading System</label>
-      <select id="gradingSystem" class="w-full p-2 border rounded mb-3">
-        <option value="standard">Standard (90-80-70-60)</option>
-        <option value="plusminus">Plus/Minus</option>
-        <option value="strict">Strict (92-85-75-65)</option>
-      </select>
-
-      <label class="block mb-1 font-medium">Current Overall Grade (%)</label>
-      <input id="currentGrade" type="number" class="w-full p-2 border rounded mb-3" />
-
-      <label class="block mb-1 font-medium">Test Average (%)</label>
-      <input id="testGrade" type="number" class="w-full p-2 border rounded mb-3" />
-
-      <label class="block mb-1 font-medium">Quiz Average (%)</label>
-      <input id="quizGrade" type="number" class="w-full p-2 border rounded mb-3" />
-
-      <label class="block mb-1 font-medium">Homework Average (%)</label>
-      <input id="hwGrade" type="number" class="w-full p-2 border rounded mb-3" />
-
-      <label class="block mb-1 font-medium">Weights (Tests / Quizzes / HW) %</label>
-      <div class="grid grid-cols-3 gap-2 mb-4">
-        <input id="wtTest" type="number" class="p-2 border rounded" placeholder="50" />
-        <input id="wtQuiz" type="number" class="p-2 border rounded" placeholder="30" />
-        <input id="wtHW" type="number" class="p-2 border rounded" placeholder="20" />
-      </div>
-
-      <label class="block mb-1 font-medium">Target Grade (A/B/C)</label>
-      <input id="targetGrade" type="text" class="w-full p-2 border rounded mb-4" placeholder="A" />
-
-      <button onclick="runPrediction()" class="w-full bg-blue-600 text-white py-2 rounded-xl hover:bg-blue-700 transition">
-        Predict Grades & Target Score
-      </button>
-
-      <div id="result" class="mt-4 text-sm font-semibold"></div>
-      <div id="studyTips" class="mt-3 text-sm text-gray-700"></div>
+    <!-- Payment Message -->
+    <div id="payMessage" class="mb-4 text-center text-gray-700 text-lg">
+      Unlock the full AI grade predictor and chat by subscribing!
     </div>
 
-    <!-- RIGHT: AI CHATBOX -->
-    <div class="flex flex-col">
-      <h2 class="text-xl font-bold mb-2">Ask the AI</h2>
-      <div id="chatBox" class="flex-1 border rounded p-3 mb-3 overflow-y-auto text-sm bg-gray-50"></div>
+    <!-- Stripe Checkout Button -->
+    <div class="flex justify-center mb-6">
+      <button id="checkout-button" class="bg-yellow-500 text-white py-2 px-6 rounded hover:bg-yellow-600 transition">
+        Subscribe / Buy Now
+      </button>
+    </div>
 
-      <div class="flex gap-2">
-        <input id="userQuestion" class="flex-1 border p-2 rounded" placeholder="Ask about grades, studying, etc." />
-        <button onclick="askAI()" class="bg-green-600 text-white px-4 rounded">Send</button>
+    <!-- PREMIUM CONTENT (Hidden until payment) -->
+    <div id="premiumContent" class="hidden grid grid-cols-1 md:grid-cols-2 gap-6">
+
+      <!-- LEFT: GRADE PREDICTOR -->
+      <div class="bg-white shadow-xl rounded-2xl p-6">
+        <h1 class="text-2xl font-bold mb-2">Grade Predictor AI+</h1>
+        <p class="text-sm text-gray-500 mb-4">Predict tests, quizzes, homework & get target scores</p>
+
+        <label class="block mb-1 font-medium">School Grading System</label>
+        <select id="gradingSystem" class="w-full p-2 border rounded mb-3">
+          <option value="standard">Standard (90-80-70-60)</option>
+          <option value="plusminus">Plus/Minus</option>
+          <option value="strict">Strict (92-85-75-65)</option>
+        </select>
+
+        <label class="block mb-1 font-medium">Current Overall Grade (%)</label>
+        <input id="currentGrade" type="number" class="w-full p-2 border rounded mb-3" />
+
+        <label class="block mb-1 font-medium">Test Average (%)</label>
+        <input id="testGrade" type="number" class="w-full p-2 border rounded mb-3" />
+
+        <label class="block mb-1 font-medium">Quiz Average (%)</label>
+        <input id="quizGrade" type="number" class="w-full p-2 border rounded mb-3" />
+
+        <label class="block mb-1 font-medium">Homework Average (%)</label>
+        <input id="hwGrade" type="number" class="w-full p-2 border rounded mb-3" />
+
+        <label class="block mb-1 font-medium">Weights (Tests / Quizzes / HW) %</label>
+        <div class="grid grid-cols-3 gap-2 mb-4">
+          <input id="wtTest" type="number" class="p-2 border rounded" placeholder="50" />
+          <input id="wtQuiz" type="number" class="p-2 border rounded" placeholder="30" />
+          <input id="wtHW" type="number" class="p-2 border rounded" placeholder="20" />
+        </div>
+
+        <label class="block mb-1 font-medium">Target Grade (A/B/C)</label>
+        <input id="targetGrade" type="text" class="w-full p-2 border rounded mb-4" placeholder="A" />
+
+        <button onclick="runPrediction()" class="w-full bg-blue-600 text-white py-2 rounded-xl hover:bg-blue-700 transition">
+          Predict Grades & Target Score
+        </button>
+
+        <div id="result" class="mt-4 text-sm font-semibold"></div>
+        <div id="studyTips" class="mt-3 text-sm text-gray-700"></div>
       </div>
+
+      <!-- RIGHT: AI CHATBOX -->
+      <div class="flex flex-col bg-white shadow-xl rounded-2xl p-6">
+        <h2 class="text-xl font-bold mb-2">Ask the AI</h2>
+        <div id="chatBox" class="flex-1 border rounded p-3 mb-3 overflow-y-auto text-sm bg-gray-50"></div>
+
+        <div class="flex gap-2">
+          <input id="userQuestion" class="flex-1 border p-2 rounded" placeholder="Ask about grades, studying, etc." />
+          <button onclick="askAI()" class="bg-green-600 text-white px-4 rounded">Send</button>
+        </div>
+      </div>
+
     </div>
 
   </div>
 
   <script>
-    /* your JS stays here exactly as before */
+    // ---------- GRADE PREDICTOR ----------
+    function getLetter(grade, system) {
+      if (system === "strict") {
+        if (grade >= 92) return "A";
+        if (grade >= 85) return "B";
+        if (grade >= 75) return "C";
+        if (grade >= 65) return "D";
+        return "F";
+      }
+      if (system === "plusminus") {
+        if (grade >= 97) return "A+";
+        if (grade >= 93) return "A";
+        if (grade >= 90) return "A-";
+        if (grade >= 87) return "B+";
+        if (grade >= 83) return "B";
+        if (grade >= 80) return "B-";
+        if (grade >= 77) return "C+";
+        if (grade >= 73) return "C";
+        if (grade >= 70) return "C-";
+        if (grade >= 60) return "D";
+        return "F";
+      }
+      if (grade >= 90) return "A";
+      if (grade >= 80) return "B";
+      if (grade >= 70) return "C";
+      if (grade >= 60) return "D";
+      return "F";
+    }
+
+    function runPrediction() {
+      const current = parseFloat(document.getElementById('currentGrade').value);
+      const test = parseFloat(document.getElementById('testGrade').value);
+      const quiz = parseFloat(document.getElementById('quizGrade').value);
+      const hw = parseFloat(document.getElementById('hwGrade').value);
+      const wtT = parseFloat(document.getElementById('wtTest').value) / 100;
+      const wtQ = parseFloat(document.getElementById('wtQuiz').value) / 100;
+      const wtH = parseFloat(document.getElementById('wtHW').value) / 100;
+      const target = document.getElementById('targetGrade').value.toUpperCase();
+      const system = document.getElementById('gradingSystem').value;
+
+      if ([current, test, quiz, hw, wtT, wtQ, wtH].some(isNaN)) {
+        document.getElementById('result').innerHTML = "⚠️ Fill in all fields.";
+        return;
+      }
+
+      const predicted = (test * wtT) + (quiz * wtQ) + (hw * wtH);
+      const letter = getLetter(predicted, system);
+
+      document.getElementById('result').innerHTML = `📊 Predicted Final Grade: ${predicted.toFixed(2)}% (${letter})`;
+
+      let needed = 90;
+      if (target === "B") needed = 80;
+      if (target === "C") needed = 70;
+      if (target === "D") needed = 60;
+
+      const diff = needed - predicted;
+      let advice = "";
+
+      if (diff <= 0) {
+        advice = `✅ You are already on track for a ${target}! Keep it up.`;
+      } else {
+        advice = `🎯 You need about a ${needed}% overall. Try to raise your averages by ${diff.toFixed(1)}%.`;
+      }
+
+      document.getElementById('studyTips').innerHTML = 
+        `${advice}<br><br>
+        📘 <b>Study Tools:</b><br>
+        • 30-minute focused study sessions<br>
+        • Practice tests before exams<br>
+        • Rewrite notes into flashcards<br>
+        • Teach the material to someone else<br>`;
+    }
+
+    // ---------- AI CHATBOX ----------
+    function askAI() {
+      const input = document.getElementById('userQuestion');
+      const chat = document.getElementById('chatBox');
+
+      const userText = input.value;
+      if (!userText) return;
+
+      chat.innerHTML += `<div class='mb-2'><b>You:</b> ${userText}</div>`;
+
+      let reply = "";
+
+      if (userText.toLowerCase().includes("study")) {
+        reply = "Try using practice tests, spaced repetition, and teaching the material to someone else.";
+      } else if (userText.toLowerCase().includes("test")) {
+        reply = "Focus on weak topics and take at least 2 timed practice tests before the exam.";
+      } else if (userText.toLowerCase().includes("raise")) {
+        reply = "Improve homework consistency and quiz scores first for fast grade boosts.";
+      } else if (userText.toLowerCase().includes("grade")) {
+        reply = "Enter your averages and weights to see your predicted final grade instantly.";
+      } else {
+        reply = "I'm your study & grade assistant. Ask about studying, improving scores, or grade predictions.";
+      }
+
+      chat.innerHTML += `<div class='mb-3'><b>AI:</b> ${reply}</div>`;
+      chat.scrollTop = chat.scrollHeight;
+      input.value = "";
+    }
+
+    // ---------- STRIPE CHECKOUT ----------
+    const STRIPE_PUBLIC_KEY = "pk_test_51RT2IC02MpZqiwOSZAuEAJVmiyo83I3Gv8bt3zbRBvurFK5DIZmSZpwpscWOR90N4ICYaDoIBeAUGgCQnMFzP15b00fLJABl7y"
+; // Replace with your key
+    const STRIPE_PRICE_ID = "price_1SZtzm02MpZqiwOSwZgyVVRI
+; // Replace with your Price ID
+
+    const stripe = Stripe(STRIPE_PUBLIC_KEY);
+
+    document.getElementById("checkout-button").addEventListener("click", () => {
+      stripe.redirectToCheckout({
+        lineItems: [{ price: STRIPE_PRICE_ID, quantity: 1 }],
+        mode: "subscription", // or "payment"
+        successUrl: window.location.href + "?success=true",
+        cancelUrl: window.location.href + "?canceled=true",
+      }).then(function (result) {
+        if (result.error) alert(result.error.message);
+      });
+    });
+
+    // ---------- UNLOCK PREMIUM CONTENT ----------
+    function unlockPremium() {
+      document.getElementById("premiumContent").classList.remove("hidden");
+      document.getElementById("payMessage").innerHTML = "🎉 Premium features unlocked!";
+    }
+
+    if (window.location.href.includes("?success=true")) {
+      unlockPremium();
+    }
   </script>
 
 </body>
 </html>
-3
+
